# geode-linux-installer

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md
assets/: geode-linux-installer.desktop
include/: installationmethodpage.h  installationutils.h  mainpage.h  mainwindow.h
locale/: en.json  pl.json  ru.json  uk.json
resources/: resources.qrc
src/: common_components.py  installation_method_page.py  installation_utils.py  installationmethodpage.cpp  installationutils.cpp  locale.py  main.py  mainpage.cpp  mainwindow.cpp  resources.py  steam_game_finder.py  swelvy_bg.py  welcome_page.py
ui/: installationmethodpage.ui  mainpage.ui  mainwindow.ui
